# CIS5600-Projects-FundamentalGraphics

CIS5600-Proj01-TinyGLM/: .gitignore  conceptual_questions.txt  help_log.txt  main.cpp  mat4.cpp  vec4.cpp  vec4.h
CIS5600-Proj02-SceneGraph/: CIS5600_Instruct_hw02.md  CMakeLists.txt  README.md
CIS5600-Proj02-SceneGraph/cmake/: QtConfig.cmake
CIS5600-Proj02-SceneGraph/src/: mygl.cpp
